--- a/main.html
+++ b/main.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Assignment #3</h1>
+    <table class="middle" id="table-1">
+      <tr>
+        <td id="t11">left</td>
+        <td id="t12">center</td>
+        <td id="t13">right</td>
+      </tr>
+      <tr>
+        <td id="t11">left</td>
+        <td id="t12">center</td>
+        <td id="t13">right</td>
+      </tr>
+      <tr>
+        <td id="t11">left</td>
+        <td id="t12">center</td>
+        <td id="t13">right</td>
+      </tr>
+    </table>
+ <br>
+    <table class="middle" id="table-2" cellpadding='1px' cellspacing="1px">
+     <tr>
+      <td  colspan="6" id="t21"></td>
+     </tr>
+    <tr>
+      <td rowspan="4"></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td rowspan="2" colspan="3"></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td colspan="6"></td>
+  </tr>
+    </table>
+    
+<br>
+
+    <table id="table-3" class="middle">
+      <tr class="green">
+        <td></td>
+      </tr>
+      <tr id="t-image">
+        <td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="image"></td>
+      </tr>
+      <tr class="blue">
+        <td></td>
+      </tr>
+    </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
