--- a/main.html
+++ b/main.html
@@ -12,17 +12,17 @@
     <table class="middle" id="table-1">
       <tr>
         <td id="t11">left</td>
-        <td id="t12">center</td>
+          <td id="t12" class="center">center</td>
         <td id="t13">right</td>
       </tr>
       <tr>
         <td id="t11">left</td>
-        <td id="t12">center</td>
+          <td id="t12" class="center">center</td>
         <td id="t13">right</td>
       </tr>
       <tr>
         <td id="t11">left</td>
-        <td id="t12">center</td>
+          <td id="t12" class="center">center</td>
         <td id="t13">right</td>
       </tr>
     </table>
