--- a/main.html
+++ b/main.html
@@ -11,19 +11,19 @@
 	<h1>HTML Assignment #3</h1>
     <table class="middle" id="table-1">
       <tr>
-        <td id="t11">left</td>
+        <td id="t11" class='left'>left</td>
           <td id="t12" class="center">center</td>
-        <td id="t13">right</td>
+        <td id="t13" class='right'>right</td>
       </tr>
       <tr>
-        <td id="t11">left</td>
+         <td id="t11" class='left'>left</td>
           <td id="t12" class="center">center</td>
-        <td id="t13">right</td>
+        <td id="t13" class='right'>right</td>
       </tr>
       <tr>
-        <td id="t11">left</td>
+         <td id="t11" class='left'>left</td>
           <td id="t12" class="center">center</td>
-        <td id="t13">right</td>
+        <td id="t13" class='right'>right</td>
       </tr>
     </table>
  <br>
